--- a/main.html
+++ b/main.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Google Clone</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Navigation Bar -->
+  <header>
+    <div class="navbar">
+      <img class="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_92x30dp.png" alt="Google Logo">
+      <button class="signin-btn">Sign in</button>
+    </div>
+  </header>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  <!-- Main Section with Search Bar -->
+  <main>
+    <div class="search-container">
+      <input type="text" class="search-bar" placeholder="Search Google or type a URL">
+      <div class="buttons">
+        <button class="search-btn">Google Search</button>
+        <button class="lucky-btn">I'm Feeling Lucky</button>
+      </div>
+    </div>
+  </main>
 
-  <body>
-    <!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+  <!-- Footer Section -->
+  <footer>
+    <div class="footer-left">
+      <span>India</span>
+      <a href="https://policies.google.com/privacy" target="_blank">Privacy</a>
+    </div>
+    <div class="footer-right">
+      <!-- You can add footer right content here if needed -->
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
