--- a/main.html
+++ b/main.html
@@ -8,17 +8,18 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <header>
+  <nav>
     <div class="navbar">
       <img class="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_92x30dp.png" alt="Google Logo">
-      <button class="signin-btn">Sign in</button>
+      <button class="sign_in">Sign in</button>
     </div>
-  </header>
+  </nav>
 
   <!-- Main Section with Search Bar -->
   <main>
     <div class="search-container">
-      <input type="text" class="search-bar" placeholder="Search Google or type a URL">
+      <input type="text" class="search_bar" placeholder="Search Google or type a URL">
+	  <input type="submit" value="Google Search">
       <div class="buttons">
         <button class="search-btn">Google Search</button>
         <button class="lucky-btn">I'm Feeling Lucky</button>
@@ -28,12 +29,11 @@
 
   <!-- Footer Section -->
   <footer>
-    <div class="footer-left">
-      <span>India</span>
-      <a href="https://policies.google.com/privacy" target="_blank">Privacy</a>
+    <div class="footer-left l_ftr">
+      India
     </div>
-    <div class="footer-right">
-      <!-- You can add footer right content here if needed -->
+    <div class="footer-right r_ftr">
+      Privacy
     </div>
   </footer>
 
